tests/binary/binary.exp
Error ------------------------------------------------------------------------------------------------------ in.js:27:15

Cannot use `in` because on the right-hand side, number [1] must be an object or array. [invalid-in-rhs]

   27|     ('foo' in 123); // error
                     ^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:28:15

Cannot use `in` because on the right-hand side, string [1] must be an object or array. [invalid-in-rhs]

   28|     ('foo' in 'bar'); // error
                     ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:29:15

Cannot use `in` because on the right-hand side, undefined [1] must be an object or array. [invalid-in-rhs]

   29|     ('foo' in void 0); // error
                     ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:30:15

Cannot use `in` because on the right-hand side, null [1] must be an object or array. [invalid-in-rhs]

   30|     ('foo' in null); // error
                     ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:35:6

Cannot use `in` because on the left-hand side, null [1] must be a string or number. [invalid-in-lhs]

   35|     (null in {}); // error
            ^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:36:6

Cannot use `in` because on the left-hand side, undefined [1] must be a string or number. [invalid-in-lhs]

   36|     (void 0 in {}); // error
            ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:37:6

Cannot use `in` because on the left-hand side, object literal [1] must be a string or number. [invalid-in-lhs]

   37|     ({} in {}); // error
            ^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:38:6

Cannot use `in` because on the left-hand side, empty array literal [1] must be a string or number. [invalid-in-lhs]

   38|     ([] in {}); // error
            ^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:39:6

Cannot use `in` because on the left-hand side, boolean [1] must be a string or number. [invalid-in-lhs]

   39|     (false in []); // error
            ^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:44:18

Cannot use `in` because on the right-hand side, number [1] must be an object or array. [invalid-in-rhs]

   44|     if ('foo' in 123) {} // error
                        ^^^ [1]


Error ------------------------------------------------------------------------------------------------------- in.js:45:9

Cannot use `in` because on the left-hand side, boolean literal `false` [1] must be a string or number. [invalid-in-lhs]

   45|     if (!'foo' in {}) {} // error, !'foo' is a boolean
               ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ in.js:52:15

Cannot use `in` because on the right-hand side, mixed [1] must be an object or array. [invalid-in-rhs]

   in.js:52:15
   52|     ('foo' in y); // error
                     ^

References:
   in.js:50:26
   50|   function(x: Object, y: mixed) {
                                ^^^^^ [1]



Found 12 errors
